# base-memoryts

./: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  postBuild.sh  tsconfig.json  winapi.d.ts
.github/workflows/: CI.yml
__test__/: index.spec.ts
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: postBuild.sh
src/: function.rs  lib.rs  memory.rs  module.rs  process.rs  util.rs
