[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "2"
napi-derive = "2"
winapi = { version = "0.3.9", features = ["tlhelp32", "wincontypes", "handleapi", "processthreadsapi", "memoryapi", "winbase", "psapi", "securitybaseapi"]}

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
